tdf#94378: Respond to OnStorageChanged

...as emitted from SfxObjectShell::SaveCompleted when toggling edit mode.

Change-Id: I4d99554c3587cf3fd67993ce94ccd77629b5e259